Image gap fix

--- a/styles/style.css
+++ b/styles/style.css
@@ -19,6 +19,7 @@ body{
 img{
     max-width: 100%;
     height: auto;
+    display: block;
 }
 
 nav{
@@ -54,6 +55,39 @@ nav a:hover{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     gap: 5px
+}
+
+#about{
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    border: 3px solid black;
+    text-align: center;
+    box-shadow: 5px 5px 10px #6f7364;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+#about-box{
+    grid-column: 1/4;
+    grid-row: 1/3;
+    z-index: -1;
+}
+
+#about-img{
+    width: 100%;
+    height: auto;
+    z-index: -1;
+}
+
+#about-msg{
+    grid-column: 2/3;
+    grid-row: 1/2;
+    margin-top: 10px;
+    color: black;
+}
+
+h1{
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 #blue{
@@ -110,37 +144,6 @@ p{
     font-family: Arial, Helvetica, sans-serif;
 }
 
-#about{
-    display: grid;
-    grid-template-columns: 1fr 3fr 1fr;
-    border: 3px solid black;
-    text-align: center;
-    box-shadow: 5px 5px 10px #6f7364;
-    margin-top: 10px;
-    margin-bottom: 10px;
-}
-
-#about-box{
-    grid-column: 1/4;
-    grid-row: 1/3;
-    z-index: -1;
-}
-
-#about-img{
-    width: 100%;
-    z-index: -1;
-}
-
-#about-msg{
-    grid-column: 2/3;
-    grid-row: 1/2;
-    margin-top: 10px;
-    color: black;
-}
-
-h1{
-    font-family: Arial, Helvetica, sans-serif;
-}
 
 #content2{
     background-color: #98c1d9;
